--- a/1.html
+++ b/1.html
@@ -12,6 +12,23 @@
         width: 100px;
         height: 100px;
         background: red;
+        -webkit-animation: rotate 1s easy-in infinite;
+    }
+    @-webkit-keyframes rotate {
+        from {
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -ms-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+        to {
+            -webkit-transform: rotate(360deg);
+            -moz-transform: rotate(360deg);
+            -ms-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
     }
 </style>
 <body>
