--- a/1.html
+++ b/1.html
@@ -12,7 +12,8 @@
         width: 100px;
         height: 100px;
         background: red;
-        -webkit-animation: rotate 1s easy-in infinite;
+        border-radius: 30px;
+        -webkit-animation: rotate 1s ease-in infinite;
     }
     @-webkit-keyframes rotate {
         from {
